force-app/main/default/objects/job_application__c/fields/average_review_score__c.field-meta.xml
<CustomField>
    <fullName>average_review_score__c</fullName>
    <formula>50</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>average review score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>