force-app/main/default/objects/job_application__c/fields/candidate__c.field-meta.xml
<CustomField>
    <fullName>candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>candidate</label>
    <referenceTo>candidate__c</referenceTo>
    <relationshipLabel>job applications</relationshipLabel>
    <relationshipName>job_applications</relationshipName>
    <type>Lookup</type>
</CustomField>