force-app/main/default/objects/job_application__c/fields/competency_rating__c.field-meta.xml
<CustomField>
    <fullName>competency_rating__c</fullName>
    <formula>if(average_review_score__c &lt;3, &quot;not qualified&quot;,
  if( average_review_score__c &gt;=3 &amp;&amp;  average_review_score__c &lt;3.75, &quot;minimally qualified&quot;,
if( average_review_score__c &gt;=3.57 &amp;&amp;  average_review_score__c &lt;4.75,&quot;qualified&quot;,&quot;highly qualified&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>competency rating</label>
    <type>Text</type>
</CustomField>