force-app/main/default/objects/job_application__c/fields/legacy_application_number__c.field-meta.xml
<CustomField>
    <fullName>legacy_application_number__c</fullName>
    <label>legacy application number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>