force-app/main/default/objects/job_application__c/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <formula>candidate__r.first_name__c &amp;&quot; &quot;&amp; candidate__r.last_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>name</label>
    <type>Text</type>
</CustomField>