force-app/main/default/objects/job_application__c/fields/number_of_job_applications__c.field-meta.xml
<CustomField>
    <fullName>number_of_job_applications__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>number of job applications</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>