force-app/main/default/objects/job_application__c/fields/phone__c.field-meta.xml
<CustomField>
    <fullName>phone__c</fullName>
    <formula>candidate__r.phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>phone</label>
    <type>Text</type>
</CustomField>