force-app/main/default/objects/job_application__c/fields/rating__c.field-meta.xml
<CustomField>
    <fullName>rating__c</fullName>
    <formula>name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>rating</label>
    <type>Text</type>
</CustomField>