force-app/main/default/objects/job_application__c/fields/stage__c.field-meta.xml
<CustomField>
    <fullName>stage__c</fullName>
    <label>stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-new</fullName>
            </value>
            <value>
                <fullName>-phone screen</fullName>
            </value>
            <value>
                <fullName>-schedule interview</fullName>
            </value>
            <value>
                <fullName>-interviews completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>