force-app/main/default/objects/job_application__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-open</fullName>
            </value>
            <value>
                <fullName>-in approval</fullName>
            </value>
            <value>
                <fullName>-approved</fullName>
            </value>
            <value>
                <fullName>-hold</fullName>
            </value>
            <value>
                <fullName>-closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>