force-app/main/default/objects/job_application__c/fields/total_reviews__c.field-meta.xml
<CustomField>
    <fullName>total_reviews__c</fullName>
    <label>total reviews</label>
    <summaryForeignKey>review__c.job_application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>